upgrade to python_social_auth

--- a/appetizer/templates/quiz/index.html
+++ b/appetizer/templates/quiz/index.html
@@ -19,5 +19,5 @@
     <hr />
     <h2>第三方登陆</h2>
     {% load staticfiles %}
-    <a href="{% url 'socialauth_begin' 'douban2' %}"><img src="{%static 'img/douban/login_with_douban_32.png' %}"></a>
+    <a href="{% url 'social:begin' 'douban-oauth2' %}"><img src="{%static 'img/douban/login_with_douban_32.png' %}"></a>
 {% endblock %}
