init create user account html

--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -21,7 +21,7 @@
     <!-- jQuery -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'uikit/2.12.0/uikit.min.js' %}"></script>
+    <script src="{% static 'uikit/2.12.0/js/uikit.min.js' %}"></script>
     <script src="{% static 'bootstrap/3.2.0/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'fuelux/3.0.0/js/fuelux.min.js' %}"></script>
   </body>
