--- a/jungle/templates/registration/login.html
+++ b/jungle/templates/registration/login.html
@@ -32,6 +32,12 @@
           <a href="{% url 'social:begin' 'douban-oauth2' %}"><img src="{% static 'img/douban/login_with_douban_32.png' %}"></a>  
       </div>
     </div>
+
+    <div class="uk-width-1-1">
+      <div class="container">
+        <a href="{% url 'create' %}"> 我要注册 </a> 
+      </div>
+    </div>
   </div>
     
 {% endblock %}
