--- a/jungle/templates/registration/register.html
+++ b/jungle/templates/registration/register.html
@@ -3,7 +3,33 @@
 {% block content %}
   
   <div class="uk-grid">
-  	{{ form.as_p }}
+
+  	<div class="uk-width-1-2">
+      <div class="container">
+      	<form class="form-signin" role="form">
+      		{% csrf_token %}
+        	<div class="form-group">
+    			<label for="exampleInputEmail1">用户名</label>
+    			<input type="email" class="form-control" id="exampleInputEmail1" placeholder="张三丰">
+  			</div>
+  			<div class="form-group">
+    			<label for="exampleInputPassword1">密 码</label>
+    			<input type="password" class="form-control" id="exampleInputPassword1">
+  			</div>
+  			<div class="form-group">
+    			<label for="exampleInputPassword1">确认密码</label>
+    			<input type="password" class="form-control" id="exampleInputPassword1">
+  			</div>
+  			<div class="checkbox">
+    			<label>
+      				<input type="checkbox"> 已认真阅读并同意<a href="">使用条款</a>
+    			</label>
+  			</div>
+  			<button class="btn btn-lg btn-primary btn-block" type="submit">注 册</button>
+  		</form>
+      </div> <!-- /container -->
+    </div>
+
     <div class="uk-width-1-1">
       <div class="container">
         <a href="{% url 'login' %}"> 直接登陆 </a> 
