--- a/jungle/templates/registration/register.html
+++ b/jungle/templates/registration/register.html
@@ -9,16 +9,16 @@
       	<form class="form-signin" role="form">
       		{% csrf_token %}
         	<div class="form-group">
-    			<label for="exampleInputEmail1">用户名</label>
-    			<input type="email" class="form-control" id="exampleInputEmail1" placeholder="张三丰">
+    			<label for="username">用户名</label>
+    			<input type="email" class="form-control" id="username" name="username" placeholder="张三丰">
   			</div>
   			<div class="form-group">
-    			<label for="exampleInputPassword1">密 码</label>
-    			<input type="password" class="form-control" id="exampleInputPassword1">
+    			<label for="password1">密 码</label>
+    			<input type="password" class="form-control" id"password1" name="password1">
   			</div>
   			<div class="form-group">
-    			<label for="exampleInputPassword1">确认密码</label>
-    			<input type="password" class="form-control" id="exampleInputPassword1">
+    			<label for="password2">确认密码</label>
+    			<input type="password" class="form-control" id="password2">
   			</div>
   			<div class="checkbox">
     			<label>
