modify placehoder in register

--- a/jungle/templates/registration/register.html
+++ b/jungle/templates/registration/register.html
@@ -11,7 +11,7 @@
       		{% csrf_token %}
         	<div class="form-group">
     			<label for="username">用户名</label>
-    			<input type="email" class="form-control" id="username" name="username" placeholder="张三丰" value="{{ username }}">
+    			<input type="email" class="form-control" id="username" name="username" placeholder="张三丰" {% if username %} value="{{ username }}" {% endif %}>
   			</div>
   			<div class="form-group">
     			<label for="password1">密 码</label>
