--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> {% block title %} Karel Quiz {% endblock %} </title>
+    <title> {% block title %} Karel {% endblock %} </title>
     <!-- CSS -->
     <link href="{% static 'bootstrap/3.2.0/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'fuelux/3.0.0/css/fuelux.min.css' %}" rel="stylesheet">
