--- a/jungle/templates/registration/login.html
+++ b/jungle/templates/registration/login.html
@@ -11,7 +11,8 @@
     <div class="uk-width-2-3">
       <div class="container">
 
-        <form class="form-signin" role="form">
+        <form action="/" method="post" class="form-signin" role="form">
+          {% csrf_token %}
           <h2 class="form-signin-heading">请登陆</h2>
           <input type="email" class="form-control" placeholder="邮箱" required autofocus>
           <input type="password" class="form-control" placeholder="密码" required>
