--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -9,13 +9,10 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-     <title> {% block title %} Karel {% endblock %} </title>
+    <title> {% block title %} Karel {% endblock %} </title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'bootstrap/3.2.0/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'jungle/css/jumbotron.css' %}" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -28,10 +25,14 @@
     <![endif]-->
     <link href="{% static 'fuelux/3.0.0/css/fuelux.min.css' %}" rel="stylesheet">
     <link href="{% static 'uikit/2.12.0/css/uikit.min.css' %}" rel="stylesheet">
+    
+    <!-- Custom styles for this template -->
+    <link href="{% static 'jungle/css/signin.css'%}" rel="stylesheet">
+    <link href="{% static 'jungle/css/jumbotron.css' %}" rel="stylesheet">
   </head>
 
   <body>
-
+    
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -97,6 +98,7 @@
         <p>&copy; Computing-works 2014</p>
       </footer>
     </div> <!-- /container -->
+    
 
 
     <!-- Bootstrap core JavaScript
