modify appetizer base.html

--- a/appetizer/templates/quiz/base.html
+++ b/appetizer/templates/quiz/base.html
@@ -14,7 +14,7 @@
     <link href="{% static 'appetizer/css/signin.css'%}" rel="stylesheet">
   </head>
   <body>
-  	{% block body %}
+  	{% block content %}
   	{% endblock %}
 
     <!-- jQuery -->
