--- a/jungle/templates/admin/base_site.html
+++ b/jungle/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 {% block title %}{{ title }} | {% trans 'Karel site admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'Karel机器人历险' %}</h1>
+<a href="/"><h1 id="site-name">{% trans 'Karel机器人历险' %}</h1></a>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
