--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -61,8 +61,8 @@
         </div><!--/.navbar-collapse --> -->
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="list-inline navbar-right">
-            <li><a href="{% url 'login' %}"><button class="btn btn-success">登陆</button></a></li>
-            <li><a href="{% url 'create' %}"><button class="btn btn-primary">注册</button></a></li>
+            <li><a href="{% url 'login' %}" class="btn btn-success" role="button">登陆</a></li>
+            <li><a href="{% url 'create' %}" class="btn btn-primary" role="button">注册</a></li>
           </ul>
         </div>
       </div>
