--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -74,9 +74,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="http://www.nclab.com.cn:8888" role="button">Learn more &raquo;</a></p>
+        <h1>Karel 欢迎你!</h1>
+        <p></p>
+        <p><a class="btn btn-primary btn-lg" href="http://www.nclab.com.cn:8888" role="button">了解更多 &raquo;</a></p>
       </div>
     </div>
 
