--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -85,13 +85,13 @@
       <div class="row">
         <div class="col-md-4">
           <h2>经典</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>Karel the Robot由Rich Pattis始创于1970年代，是标准的编程入门学习课程. 符合国际计算机课程教学大纲. 经历代程序员发展，设计出多种实现版本. </p>
+          <p><a class="btn btn-default" href="#" role="button">更多 &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>互动</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>在线平台中，Karel机器人采取自学习模式，通过交互，教程，视频，情节，插画等最大程度程度满足交互体验，增强互动实践.</p>
+          <p><a class="btn btn-default" href="#" role="button">更多 &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>剧情</h2>
