--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -94,9 +94,9 @@
           <p><a class="btn btn-default" href="#" role="button">更多 &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>剧情</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>技能</h2>
+          <p>Karel机器人将使您由零基础变为掌握基本编程概念，这些实用技能会帮助您无缝过渡到Python语言和3D作图建模等高级课程的学习.</p>
+          <p><a class="btn btn-default" href="#" role="button">更多 &raquo;</a></p>
         </div>
       </div>
 
