--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -45,6 +45,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <div id="container">
+            <img src="http://images.nclab.com.cn/img/karel-alone.png" width="44" height="44" alt="Karel">
+          </div>
           <a class="navbar-brand" href="/">Karel机器人</a>
         </div>
         <!-- <div id="navbar" class="navbar-collapse collapse">
