--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -39,17 +39,20 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
+          <div id="container">
+            <img src="http://images.nclab.com.cn/img/karel-alone.png" style="margin:20px" width="44" height="44" alt="Karel">
+          </div>
+        </div>
+        <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div id="container">
-            <img src="http://images.nclab.com.cn/img/karel-alone.png" width="44" height="44" alt="Karel">
-          </div>
           <a class="navbar-brand" href="/">Karel机器人</a>
         </div>
+        
         <!-- <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
