--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -40,7 +40,7 @@
       <div class="container">
         <div class="navbar-header">
           <div id="container">
-            <img src="http://images.nclab.com.cn/img/karel-alone.png" style="margin:20px" width="44" height="44" alt="Karel">
+            <img src="http://images.nclab.com.cn/img/karel-alone.png" style="margin:10px 10px 0 0;" width="44" height="44" alt="Karel">
           </div>
         </div>
         <div class="navbar-header">
