--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -116,10 +116,6 @@
       <p class="text-center">&copy; Computing-works 2015 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/></p>
     </footer>
     
-    $( "#spinning-container" ).click(function() {
-            console.log( "You're on the logo!" );
-          });
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -131,5 +127,6 @@
     <script src="{% static 'fuelux/3.0.0/js/fuelux.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'jungle/js/ie10-viewport-bug-workaround.js' %}"></script>
+    <script src="{% static 'jungle/js/myapp.js' %}"></script>
   </body>
 </html>
