--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -67,8 +67,16 @@
         </div><!--/.navbar-collapse --> -->
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="list-inline navbar-right">
-            <li><a href="{% url 'login' %}" class="btn btn-success" role="button">登陆</a></li>
-            <li><a href="{% url 'create' %}" class="btn btn-primary" role="button">注册</a></li>
+            {% if not user.is_authenticated %}
+              <li><a href="{% url 'login' %}" class="btn btn-success" role="button">登陆</a></li>
+              <li><a href="{% url 'create' %}" class="btn btn-primary" role="button">注册</a></li>
+            {% else %}
+              <li> 欢迎: {{ user.username }} </li>
+              {% if user.is_staff and user.is_superuser %}
+                <li> <a href="/dimension/admin/" class="btn btn-primary" role="button">  管理员 </a></li>
+              {% endif %}
+                <li><a href="{% url 'logout' %}" class="btn btn-success" role="button">登出</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
