login user display for base.html

--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -71,7 +71,7 @@
               <li><a href="{% url 'login' %}" class="btn btn-success" role="button">登陆</a></li>
               <li><a href="{% url 'create' %}" class="btn btn-primary" role="button">注册</a></li>
             {% else %}
-              <li> 欢迎: {{ user.username }} </li>
+              <li> <p class="bg-info">欢迎: {{ user.username }} </p></li>
               {% if user.is_staff and user.is_superuser %}
                 <li> <a href="/dimension/admin/" class="btn btn-primary" role="button">  管理员 </a></li>
               {% endif %}
