--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -121,7 +121,7 @@
     <hr>
 
     <footer>
-      <p class="text-center">&copy; Computing-works 2015 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/></p>
+      <p class="text-center">&copy; Computing-works 2015 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/></p> | <a href="http://desktop.nclab.com.cn:8888">在线桌面</a>
     </footer>
     
     <!-- Bootstrap core JavaScript
