--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -88,12 +88,85 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Karel, 欢迎你!</h1>
-        <p>Karel the Robot 是驻在在线平台中的可视化互动自学习机器人, 它能够帮助初学者循序渐进地进入编程殿堂.</p>
-	<p><a class="btn btn-primary btn-lg" href="http://karel.readthedocs.org/zh_CN/latest/p01.html" role="button" target='_blank'>了解更多 &raquo;</a></p>
+        <div class="row">
+          <div class="col-md-8">
+            <h1>Karel, 欢迎你!</h1>
+            <p>Karel the Robot 是驻在在线平台中的可视化互动自学习机器人, 它能够帮助初学者循序渐进地进入编程殿堂.</p>
+	           <p><a class="btn btn-primary btn-lg" href="http://karel.readthedocs.org/zh_CN/latest/p01.html" role="button" target='_blank'>了解更多 &raquo;</a></p>
+          </div>
+          <div class="col-md-4">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="{% static 'img/slides/kids/1.jpg' %}" alt="...">
+                <div class="carousel-caption">
+                     ...
+                </div>
+              </div>
+              <div class="item">
+                <img src="{% static 'img/slides/kids/2.jpg' %}" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="{% static 'img/slides/kids/3.jpg' %}" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="{% static 'img/slides/kids/4.jpg' %}" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="{% static 'img/slides/kids/5.jpg' %}" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="{% static 'img/slides/kids/6.jpg' %}" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          </div>
+        </div>
       </div>
     </div>
 
+    <br />
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
