--- a/jungle/templates/base.html
+++ b/jungle/templates/base.html
@@ -103,7 +103,7 @@
               <li data-target="#carousel-example-generic" data-slide-to="2"></li>
               <li data-target="#carousel-example-generic" data-slide-to="3"></li>
               <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+              <!-- <li data-target="#carousel-example-generic" data-slide-to="5"></li> -->
             </ol>
 
             <!-- Wrapper for slides -->
@@ -142,13 +142,13 @@
                   <p></p>
                 </div>
               </div>
-              <div class="item">
+              <!-- <div class="item">
                 <img src="{% static 'img/slides/kids/6.jpg' %}" alt="...">
                 <div class="carousel-caption">
                   <h3></h3>
                   <p></p>
                 </div>
-              </div>
+              </div> -->
             </div>
 
             <!-- Controls -->
