--- a/jungle/templates/registration/register.html
+++ b/jungle/templates/registration/register.html
@@ -33,7 +33,7 @@
 
     <div class="uk-width-1-1">
       <div class="container">
-        <a href="{% url 'login' %}"> 直接登陆 </a> 
+        <a href="{% url 'muster:login' %}"> 直接登陆 </a> 
       </div>
     </div>
   </div>
