--- a/jungle/templates/registration/login.html
+++ b/jungle/templates/registration/login.html
@@ -40,7 +40,7 @@
 
     <div class="uk-width-1-1">
       <div class="container">
-        <a href="{% url 'create' %}"> 我要注册 </a> 
+        <a href="{% url 'muster:create' %}"> 我要注册 </a> 
       </div>
     </div>
   </div>
