--- a/jungle/templates/registration/register.html
+++ b/jungle/templates/registration/register.html
@@ -26,6 +26,7 @@
       				<input type="checkbox"> 已认真阅读并同意<a href="">使用条款</a>
     			</label>
   			</div>
+                    <table>{{ form.as_table }}</table>
   			<button class="btn btn-lg btn-primary btn-block" type="submit">注 册</button>
   		</form>
       </div> <!-- /container -->
