--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -69,7 +69,7 @@
           <ul class="list-inline navbar-right">
             {% if not user.is_authenticated %}
               <li><a href="{% url 'muster:login' %}" class="btn btn-success" role="button">登陆</a></li>
-              <li><a href="{% url 'muster:create' %}" class="btn btn-primary" role="button">注册</a></li>
+              <li><a href="{% url 'muster:register' %}" class="btn btn-primary" role="button">注册</a></li>
             {% else %}
               <li> <p class="bg-info">欢迎: {{ user.username }} </p></li>
               {% if user.is_staff and user.is_superuser %}
@@ -209,5 +209,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'jungle/js/ie10-viewport-bug-workaround.js' %}"></script>
     <script src="{% static 'jungle/js/myapp.js' %}"></script>
+    {% block js %}{% endblock %}
   </body>
 </html>
