--- a/jungle/templates/registration/register.html
+++ b/jungle/templates/registration/register.html
@@ -1,35 +1,19 @@
 {% extends BASE_TMP %}
+{% load staticfiles %}
 
 {% block content %}
-  
 <div class="uk-grid">
       <div class="uk-width-1-2">
         <div class="container">
-          <form action="/" method="post"
+          <form action="{% url 'muster:register' %}" method="post"
       			class="form-signin" role="form">
             {% csrf_token %}
+            {% for field in form %}
             <div class="form-group">
-              <label for="{{ form.username.id_for_label }}">用户名</label>
-              <input type="text" class="form-control" id="{{ form.username.id_for_label }}" name="username" placeholder="张三丰" {% if username %} value="{{ form.username.value }}" {% endif %}>
+              {{ field.errors }}
+              {{ field.label_tag }} {{ field }}
             </div>
-            <div class="form-group">
-              <label for="{{ form.password.id_for_label }}">密 码</label>
-              <input type="password" class="form-control" id"{{ form.password.id_for_label }}" name="password">
-            </div>
-            <div class="form-group">
-              <label for="{{ form.password_again.id_for_label }}">确认密码</label>
-              <input type="password" class="form-control" id="{{ form.password_again.id_for_label }}">
-            </div>
-            <div class="form-group">
-              {{ form.captcha.errors }}
-              <label for="{{ form.captcha.id_for_label }}">{{ form.captcha.label }}</label>
-              {{ form.captcha }}
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox"> 已认真阅读并同意<a href="">使用条款</a>
-              </label>
-            </div>
+            {% endfor %}
             <button class="btn btn-lg btn-primary btn-block" type="submit">注 册</button>
           </form>
       </div> <!-- /container -->
@@ -40,5 +24,8 @@
       </div>
     </div>
   </div>
-    
+{% endblock %}
+
+{% block js %}
+  <script src="{% static 'jungle/js/register.js' %}"></script>
 {% endblock %}
