--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -32,6 +32,10 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'jungle/css/signin.css'%}" rel="stylesheet">
     <link href="{% static 'jungle/css/jumbotron.css' %}" rel="stylesheet">
+    {% block css %} 
+    <style type="text/css" media="screen">  
+    </style>
+    {% endblock %}
   </head>
 
   <body>
