--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -198,7 +198,8 @@
     <hr>
 
     <footer>
-      <p class="text-center">&copy; Computing-works 2015 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="/">在线桌面</a> </p>
+      <p class="text-center">&copy; Computing-works 2015 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="http://desktop.nclab.com.cn:8888/">在线桌面</a> </p>
+	<p class="text-center">Bitcoin: </p>
     </footer>
     
     <!-- Bootstrap core JavaScript
