add buy link in index

--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -96,7 +96,8 @@
           <div class="col-md-8">
             <h1>Karel, 欢迎你!</h1>
             <p>Karel the Robot 是驻在在线平台中的可视化互动自学习机器人, 它能够帮助初学者循序渐进地进入编程殿堂.</p>
-	           <p><a class="btn btn-primary btn-lg" href="http://karel.readthedocs.org/zh_CN/latest/p01.html" role="button" target='_blank'>了解更多 &raquo;</a></p>
+	           <p><a class="btn btn-primary btn-lg" href="http://karel.readthedocs.org/zh_CN/latest/p01.html" role="button" target='_blank'>了解更多 &raquo;</a> | 
+			<a class="btn btn-default" href="http://buy.nclab.com.cn/" role="button" target='_blank'>购买 &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
