--- a/jungle/templates/registration/login.html
+++ b/jungle/templates/registration/login.html
@@ -27,6 +27,9 @@
               <input type="checkbox" value="remember-me"> 记住我
             </label>
           </div>
+          {% if next %}
+          	<input type='hidden' name='next' value='{{ next }}'>
+          {% endif %}
           <button class="btn btn-lg btn-primary btn-block" type="submit">登 陆</button>
         </form>
       </div> <!-- /container -->
