modify alipay index.html

--- a/alipay/templates/alipay/base.html
+++ b/alipay/templates/alipay/base.html
@@ -9,9 +9,11 @@
     	<meta name="author" content="">
     	<link rel="icon" href="/favicon.ico">
 		<title>支付宝快捷登录接口</title>
+ 
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" href="{% static 'uikit/2.20.3/css/uikit.min.css' %}" >
 
 		<link rel="stylesheet" href="{% static 'alipay/css/alipay.css' %}">
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" href="{% static 'alipay/css/style.css' %}">
 </head>
 
@@ -75,7 +77,6 @@
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-	<script src="{% static 'alipay/js/myapp.js' %}"></script>
 	{% block js %}{% endblock %}
 </body>
 </html>
