modify in login html

--- a/jungle/templates/registration/login.html
+++ b/jungle/templates/registration/login.html
@@ -5,7 +5,7 @@
   <div class="uk-grid">
     <div class="uk-width-1-1">
       <h1 class="uk-heading-small">Karel机器人</h1>
-      <p class="uk-text-large">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+      <p class="uk-text-large">欢迎登录, 选择您喜欢的课程.</p>
     </div>
 
     <div class="uk-width-2-3">
