--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -7,7 +7,7 @@
     	...
     </div>
     <div class="uk-width-1-3">
-		<p>Courses Gallary</p>
+		<h1><strong>Courses Gallary</strong></h1>
 		<video width="480" height="320" autoplay loop muted controls>  
         	<source src="http://static.nclab.com.cn/Lake.mp4" type="video/mp4" >
        </video>
