--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -2,19 +2,24 @@
 
 {% block content %}
 <!-- <p>{{ blog.title }}</p> -->
-<div class="uk-grid">
+<center><h1><strong>Courses Gallary</strong></h1></center>
+<div class="container">
+<div class="uk-grid uk-container-center">
     <div class="uk-width-1-3">
-    	...
+    	<video width="480" height="320" autoplay loop muted controls>  
+            <source src="http://static.nclab.com.cn//video/HOC-Section-1.mp4" type="video/mp4" >
+        </video>
     </div>
     <div class="uk-width-1-3">
-		<h1><strong>Courses Gallary</strong></h1>
-		<video width="480" height="320" autoplay loop muted controls>  
-        	<source src="http://static.nclab.com.cn/Lake.mp4" type="video/mp4" >
-       </video>
+		<!-- <video width="480" height="320" loop muted controls>  
+            <source src="http://static.nclab.com.cn//video/HOC-Section-2.mp4" type="video/mp4" >
+        </video> -->
     </div>
      <div class="uk-width-1-3">
-    	...
+    	<!-- <video width="480" height="320" loop muted controls>  
+            <source src="http://static.nclab.com.cn//video/HOC-Section-3.mp4" type="video/mp4" >
+        </video> -->
     </div>
 </div>
-
+</div>
 {% endblock%}
