--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -6,16 +6,16 @@
 <div class="container">
 <div class="uk-grid uk-container-center">
     <div class="uk-width-1-3">
-    	<video width="480" height="320" autoplay loop muted controls>  
-            <source src="http://static.nclab.com.cn//video/HOC-Section-1.mp4" type="video/mp4" >
-        </video>
-    </div>
-    <div class="uk-width-1-3">
-		<!-- <video width="480" height="320" loop muted controls>  
+        <!-- <video width="480" height="320" loop muted controls>  
             <source src="http://static.nclab.com.cn//video/HOC-Section-2.mp4" type="video/mp4" >
         </video> -->
     </div>
-     <div class="uk-width-1-3">
+    <div class="uk-width-1-3">
+    	<video width="480" height="320" autoplay loop muted controls>  
+            <source src="http://static.nclab.com.cn/video/HOC-Section-1.mp4" type="video/mp4" >
+        </video>
+    </div>
+    <div class="uk-width-1-3">
     	<!-- <video width="480" height="320" loop muted controls>  
             <source src="http://static.nclab.com.cn//video/HOC-Section-3.mp4" type="video/mp4" >
         </video> -->
