--- a/jungle/static/jungle/css/signin.css
+++ b/jungle/static/jungle/css/signin.css
@@ -44,3 +44,14 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.radio {
+  float: left;
+  margin: 10px 20px 10px 10px;
+}
+
+.radio input[type="radio"] {
+  float: left;
+  margin-top: 4px;
+  margin-right: 20px;
+}
