minor in base html

--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -17,9 +17,14 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="{% static 'bootstrap/3.3.1/css/bootstrap-theme.min.css' %}">
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="{% static 'jungle/js/ie-emulation-modes-warning.js' %}"></script>
+
+    <!-- Vue.js -->
+    <script src="{% static 'vue/0.12.10/vue.min.js' %}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
